--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "@angular/platform-browser": ">=8.0.0 <10.0.0",
     "@angular/platform-browser-dynamic": ">=8.0.0 <10.0.0",
     "@angular/router": ">=8.0.0 <10.0.0",
-    "@compodoc/compodoc": "1.0.x",
+    "@compodoc/compodoc": "1.1.x",
     "@types/jasmine": "^2.5.53",
     "@types/node": "^8.0.0",
     "@types/webpack": "4.1.2",
@@ -82,10 +82,9 @@
     "gulp-load-plugins": "1.5.x",
     "gulp-rename": "1.4.x",
     "gulp-sequence": "1.0.x",
-    "hci-ng-grid-dto": "1.0.0-beta.0",
     "immutable": "^3.8.1",
     "inline-source-map": "^0.6.2",
-    "istanbul-instrumenter-loader": "2.0.0",
+    "istanbul-instrumenter-loader": "3.0.x",
     "jasmine-core": "^2.6.2",
     "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.1.1",
