--- a/demo/package.json
+++ b/demo/package.json
@@ -31,7 +31,7 @@
     "@ng-bootstrap/ng-bootstrap": "5.0.x",
     "bootstrap": ">=4.3.1 < 4.4.0",
     "flatted": "2.0.x",
-    "hci-ng-grid-dto": "1.0.0-beta.4",
+    "hci-ng-grid-dto": "1.0.x",
     "moment": ">=2.19.3",
     "moment-random": "1.0.x",
     "prismjs": "1.16.x",
@@ -59,7 +59,6 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^3.0.0",
     "fs": "^0.0.2",
-    "gulp": "^3.9.1",
     "html-loader": "^0.5.0",
     "html-webpack-plugin": "3.2.x",
     "less": "^2.7.1",
